--- a/Applied Data Science in Python/1. Introduction to Data Science in Python/Assignment+2.ipynb
+++ b/Applied Data Science in Python/1. Introduction to Data Science in Python/Assignment+2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -40,6 +40,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -185,7 +198,7 @@
        "Australasia              12  ANZ  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -300,7 +313,7 @@
        "'United States'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +321,7 @@
    "source": [
     "def answer_one():\n",
     "    df['Name']=df.index\n",
-    "    most_summer_gold=str(df.loc[df['Gold'].argmax(),'Name'])\n",
+    "    most_summer_gold=str(df.loc[df['Gold'].idxmax(),'Name'])\n",
     "    return most_summer_gold\n",
     "answer_one()"
    ]
@@ -325,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "umich_question": "002"
    },
@@ -336,7 +349,7 @@
        "'United States'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +357,7 @@
    "source": [
     "def answer_two():\n",
     "    df['Name']=df.index\n",
-    "    most_difference=df.loc[(df['Gold']-df['Gold.1']).argmax(),'Name']\n",
+    "    most_difference=df.loc[(df['Gold']-df['Gold.1']).idxmax(),'Name']\n",
     "    return most_difference\n",
     "answer_two()"
    ]
@@ -365,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "umich_question": "003"
    },
@@ -376,7 +389,7 @@
        "'Bulgaria'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +399,7 @@
     "    df['Name']=df.index\n",
     "    df_filtered=df[(df['Gold']>=1) & (df['Gold.1']>=1)]\n",
     "    most_diff_relative=df_filtered.loc[((df_filtered['Gold']-df_filtered['Gold.1'])\n",
-    "                               /(df_filtered['Gold']+df_filtered['Gold.1'])).argmax(),'Name']\n",
+    "                               /(df_filtered['Gold']+df_filtered['Gold.1'])).idxmax(),'Name']\n",
     "    return most_diff_relative\n",
     "answer_three()"
    ]
@@ -403,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "umich_question": "004"
    },
@@ -472,10 +485,10 @@
        "Zambia                                 3\n",
        "Zimbabwe                              18\n",
        "Mixed team                            38\n",
-       "dtype: int64"
+       "Length: 146, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,6 +528,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -676,33 +702,26 @@
        "3      50       3         6      1       5  Alabama  Barbour County   \n",
        "4      50       3         6      1       7  Alabama     Bibb County   \n",
        "\n",
-       "   CENSUS2010POP  ESTIMATESBASE2010  POPESTIMATE2010     ...       \\\n",
-       "0        4779736            4780127          4785161     ...        \n",
-       "1          54571              54571            54660     ...        \n",
-       "2         182265             182265           183193     ...        \n",
-       "3          27457              27457            27341     ...        \n",
-       "4          22915              22919            22861     ...        \n",
+       "   CENSUS2010POP  ESTIMATESBASE2010  POPESTIMATE2010  ...  RDOMESTICMIG2011  \\\n",
+       "0        4779736            4780127          4785161  ...          0.002295   \n",
+       "1          54571              54571            54660  ...          7.242091   \n",
+       "2         182265             182265           183193  ...         14.832960   \n",
+       "3          27457              27457            27341  ...         -4.728132   \n",
+       "4          22915              22919            22861  ...         -5.527043   \n",
        "\n",
-       "   RDOMESTICMIG2011  RDOMESTICMIG2012  RDOMESTICMIG2013  RDOMESTICMIG2014  \\\n",
-       "0          0.002295         -0.193196          0.381066          0.582002   \n",
-       "1          7.242091         -2.915927         -3.012349          2.265971   \n",
-       "2         14.832960         17.647293         21.845705         19.243287   \n",
-       "3         -4.728132         -2.500690         -7.056824         -3.904217   \n",
-       "4         -5.527043         -5.068871         -6.201001         -0.177537   \n",
+       "   RDOMESTICMIG2012  RDOMESTICMIG2013  RDOMESTICMIG2014  RDOMESTICMIG2015  \\\n",
+       "0         -0.193196          0.381066          0.582002         -0.467369   \n",
+       "1         -2.915927         -3.012349          2.265971         -2.530799   \n",
+       "2         17.647293         21.845705         19.243287         17.197872   \n",
+       "3         -2.500690         -7.056824         -3.904217        -10.543299   \n",
+       "4         -5.068871         -6.201001         -0.177537          0.177258   \n",
        "\n",
-       "   RDOMESTICMIG2015  RNETMIG2011  RNETMIG2012  RNETMIG2013  RNETMIG2014  \\\n",
-       "0         -0.467369     1.030015     0.826644     1.383282     1.724718   \n",
-       "1         -2.530799     7.606016    -2.626146    -2.722002     2.592270   \n",
-       "2         17.197872    15.844176    18.559627    22.727626    20.317142   \n",
-       "3        -10.543299    -4.874741    -2.758113    -7.167664    -3.978583   \n",
-       "4          0.177258    -5.088389    -4.363636    -5.403729     0.754533   \n",
-       "\n",
-       "   RNETMIG2015  \n",
-       "0     0.712594  \n",
-       "1    -2.187333  \n",
-       "2    18.293499  \n",
-       "3   -10.543299  \n",
-       "4     1.107861  \n",
+       "   RNETMIG2011  RNETMIG2012  RNETMIG2013  RNETMIG2014  RNETMIG2015  \n",
+       "0     1.030015     0.826644     1.383282     1.724718     0.712594  \n",
+       "1     7.606016    -2.626146    -2.722002     2.592270    -2.187333  \n",
+       "2    15.844176    18.559627    22.727626    20.317142    18.293499  \n",
+       "3    -4.874741    -2.758113    -7.167664    -3.978583   -10.543299  \n",
+       "4    -5.088389    -4.363636    -5.403729     0.754533     1.107861  \n",
        "\n",
        "[5 rows x 100 columns]"
       ]
@@ -724,6 +743,20 @@
     "umich_question": "005"
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hdeng8\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: FutureWarning: \n",
+      "The current behaviour of 'Series.argmax' is deprecated, use 'idxmax'\n",
+      "instead.\n",
+      "The behavior of 'argmax' will be corrected to return the positional\n",
+      "maximum in the future. For now, use 'series.values.argmax' or\n",
+      "'np.argmax(np.array(values))' to get the position of the maximum\n",
+      "row.\n",
+      "  \"\"\"\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -757,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
     "umich_question": "006"
    },
@@ -768,7 +801,7 @@
        "['California', 'Texas', 'Illinois']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
     "umich_question": "007"
    },
@@ -809,11 +842,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.6/site-packages/ipykernel/__main__.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\hdeng8\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n"
      ]
     },
     {
@@ -822,7 +856,7 @@
        "'Harris County'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +872,7 @@
     "                    'POPESTIMATE2012','POPESTIMATE2013',\n",
     "                    'POPESTIMATE2014','POPESTIMATE2015']].min(axis=1))\n",
     "\n",
-    "    most_change_county=census_df_cty.loc[census_df_cty['most_change_county'].argmax(),'CTYNAME']\n",
+    "    most_change_county=census_df_cty.loc[census_df_cty['most_change_county'].idxmax(),'CTYNAME']\n",
     "    return most_change_county\n",
     "answer_seven()\n"
    ]
@@ -866,6 +900,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -929,6 +976,13 @@
     "    return counties_8\n",
     "answer_eight()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -954,7 +1008,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   },
   "umich": {
    "id": "Assignment 2",
