--- a/Applied Data Science in Python/3. Applied Machine Learning in Python/Assignment+4.ipynb
+++ b/Applied Data Science in Python/3. Applied Machine Learning in Python/Assignment+4.ipynb
@@ -126,29 +126,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
+    "# train_data = pd.read_csv('train.csv', encoding='latin1')\n",
+    "# test_data = pd.read_csv('test.csv', encoding='latin1')\n",
+    "# address = pd.read_csv('addresses.csv')\n",
+    "# latlons = pd.read_csv('latlons.csv')\n",
+    "# locs = pd.merge(address[['ticket_id', 'address']], latlons[['lat', 'lon', 'address']], how='inner', on='address')\n",
+    "# columns = ['ticket_id', 'fine_amount', 'admin_fee', 'state_fee', 'late_fee', 'discount_amount', 'judgment_amount'] # select variables for training\n",
+    "# train_data = train_data[columns+['compliance']]\n",
+    "# train_data = train_data[train_data['compliance'].notnull()]\n",
+    "# train_data = pd.merge(train_data, locs, how='left', on='ticket_id')\n",
+    "# test_data = pd.merge(test_data, locs, how='left', on='ticket_id')\n",
+    "# train_data = train_data.dropna()\n",
+    "# test_data = test_data.dropna()\n",
+    "# train_columns = ['fine_amount', 'admin_fee', 'state_fee', 'late_fee', 'discount_amount', 'judgment_amount', 'lat', 'lon']\n",
+    "# X_train = train_data[train_columns]\n",
+    "# target_column = ['compliance']\n",
+    "# y_train = train_data[target_column]\n",
     "def blight_model():\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    4 datasets: train.csv, test.csv, addresses.csv, latlons.csv\n",
+    "    \"\"\"\n",
     "    # Your code here\n",
     "    \n",
-    "    return # Your answer here"
+    "    # load datasets\n",
+    "    train_data = pd.read_csv('train.csv', encoding='latin1')\n",
+    "    test_data = pd.read_csv('test.csv', encoding='latin1')\n",
+    "    address = pd.read_csv('addresses.csv')\n",
+    "    latlons = pd.read_csv('latlons.csv')\n",
+    "    locs = pd.merge(address[['ticket_id', 'address']], latlons[['lat', 'lon', 'address']], how='inner', on='address')\n",
+    "    \n",
+    "    # preprocess\n",
+    "    train_data = train_data[train_data['compliance'].notnull()]\n",
+    "    columns = ['ticket_id', 'fine_amount', 'admin_fee', 'state_fee', 'late_fee', 'discount_amount', 'judgment_amount'] # select variables for training\n",
+    "    train_data = train_data[columns+['compliance']]\n",
+    "    test_data = test_data[columns]\n",
+    "    train_data = pd.merge(train_data, locs, how='left', on='ticket_id')\n",
+    "    test_data = pd.merge(test_data, locs, how='left', on='ticket_id')\n",
+    "    train_data = train_data.dropna()\n",
+    "    test_data = test_data.dropna()\n",
+    "    train_data = train_data.drop_duplicates('ticket_id', keep = 'last') # in case of duplicates\n",
+    "    test_data = test_data.drop_duplicates('ticket_id', keep = 'last') # in case of duplicates\n",
+    "    \n",
+    "    # train\n",
+    "    train_columns = ['fine_amount', 'admin_fee', 'state_fee', 'late_fee', 'discount_amount', 'judgment_amount', 'lat', 'lon']\n",
+    "    target_column = ['compliance']\n",
+    "    X_train = train_data[train_columns].astype('float32')\n",
+    "    y_train = train_data[target_column].astype('float32')\n",
+    "    clf = RandomForestClassifier(n_estimators=100, n_jobs=2, random_state=0) \n",
+    "    clf.fit(X_train, y_train)\n",
+    "    accuracy_score = clf.score(X_train, y_train) # 0.988078409787463\n",
+    "    \n",
+    "    # test\n",
+    "    X_test = test_data[train_columns].astype('float32')\n",
+    "    probs = clf.predict_proba(X_test)\n",
+    "    result = pd.Series(data = probs[:, 1], index = test_data['ticket_id'])\n",
+    "    return result # Your answer here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hdeng8\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3220: DtypeWarning: Columns (11,12,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  if (yield from self.run_code(code, result)):\n",
+      "C:\\Users\\hdeng8\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:52: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ticket_id\n",
+       "284932    0.020000\n",
+       "285362    0.000000\n",
+       "285361    0.010000\n",
+       "285338    0.070000\n",
+       "285346    0.000000\n",
+       "285345    0.060000\n",
+       "285347    0.020000\n",
+       "285342    0.380000\n",
+       "285530    0.018690\n",
+       "284989    0.030000\n",
+       "285344    0.000000\n",
+       "285343    0.000000\n",
+       "285340    0.190000\n",
+       "285341    0.285333\n",
+       "285349    0.040000\n",
+       "285348    0.010000\n",
+       "284991    0.010000\n",
+       "285532    0.160000\n",
+       "285406    0.010000\n",
+       "285001    0.000000\n",
+       "285006    0.000000\n",
+       "285405    0.010000\n",
+       "285337    0.020000\n",
+       "285496    0.000000\n",
+       "285497    0.060000\n",
+       "285378    0.000000\n",
+       "285589    0.000000\n",
+       "285585    0.000000\n",
+       "285501    0.116667\n",
+       "285581    0.220000\n",
+       "            ...   \n",
+       "376367    0.000000\n",
+       "376366    0.040000\n",
+       "376362    0.010000\n",
+       "376363    0.030000\n",
+       "376365    0.000000\n",
+       "376364    0.040000\n",
+       "376228    0.820000\n",
+       "376265    0.030000\n",
+       "376286    0.595000\n",
+       "376320    0.070500\n",
+       "376314    0.000000\n",
+       "376327    0.780000\n",
+       "376385    0.360000\n",
+       "376435    0.430000\n",
+       "376370    0.450000\n",
+       "376434    0.000000\n",
+       "376459    0.010000\n",
+       "376478    0.000000\n",
+       "376473    0.018000\n",
+       "376484    0.030000\n",
+       "376482    0.010000\n",
+       "376480    0.010000\n",
+       "376479    0.010000\n",
+       "376481    0.010000\n",
+       "376483    0.005000\n",
+       "376496    0.000000\n",
+       "376497    0.000000\n",
+       "376499    0.000000\n",
+       "376500    0.020000\n",
+       "369851    0.100000\n",
+       "Length: 60996, dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "blight_model()"
    ]
@@ -176,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
