--- a/Applied Data Science in Python/4 Applied Text Mining in Python/Assignment+2.ipynb
+++ b/Applied Data Science in Python/4 Applied Text Mining in Python/Assignment+2.ipynb
@@ -29,12 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\hdeng8\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
-    "#nltk.download('punkt')\n",
+    "nltk.download('punkt')\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -60,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +79,7 @@
        "255018"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +114,7 @@
        "20754"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +149,7 @@
      "text": [
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     C:\\Users\\hdeng8\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\wordnet.zip.\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
     {
@@ -148,14 +158,14 @@
        "16899"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from nltk.stem import WordNetLemmatizer\n",
-    "#nltk.download('wordnet')\n",
+    "nltk.download('wordnet')\n",
     "def example_three():\n",
     "\n",
     "    lemmatizer = WordNetLemmatizer()\n",
@@ -179,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +198,7 @@
        "0.08138249064771899"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +234,7 @@
        "0.4125199005560392"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +289,7 @@
        " ('as', 1620)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1327,7 @@
        " ...]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1363,7 @@
        "(\"twelve-o'clock-at-night\", 23)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1410,7 @@
        " (2111, 'I')]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1446,7 @@
        "25.88489646772229"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1487,7 @@
        " ('PRP', 11588)]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1529,7 @@
      "text": [
       "[nltk_data] Downloading package words to\n",
       "[nltk_data]     C:\\Users\\hdeng8\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\words.zip.\n"
+      "[nltk_data]   Package words is already up-to-date!\n"
      ]
     }
    ],
@@ -1545,14 +1555,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['corpulent', 'indecence', 'validate']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_nine(entries=['cormulent', 'incendenece', 'validrate']):\n",
-    "    \n",
-    "    \n",
-    "    return # Your answer here\n",
+    "    answer=[]\n",
+    "    for word in entries:\n",
+    "        spell = [spell for spell in correct_spellings if spell.startswith(word[0]) and len(spell) > 2] # check similar spells\n",
+    "        jdistance = [(spell, nltk.jaccard_distance(set(nltk.ngrams(word, n=3)), set(nltk.ngrams(spell, n=3)))) for spell in spell] # compute jaccard distance for each similar spell\n",
+    "        answer.append(sorted(jdistance, key = operator.itemgetter(1))[0][0]) # most similar - smaller distance \n",
+    "    return answer # Your answer here\n",
     "    \n",
     "answer_nine()"
    ]
@@ -1573,14 +1597,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['cormus', 'incendiary', 'valid']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_ten(entries=['cormulent', 'incendenece', 'validrate']):\n",
+    "    answer=[]\n",
+    "    for word in entries:\n",
+    "        spell = [spell for spell in correct_spellings if spell.startswith(word[0]) and len(spell) > 2] # check similar spells\n",
+    "        jdistance = [(spell, nltk.jaccard_distance(set(nltk.ngrams(word, n=4)), set(nltk.ngrams(spell, n=4)))) for spell in spell] # compute jaccard distance for each similar spell\n",
+    "        answer.append(sorted(jdistance, key = operator.itemgetter(1))[0][0]) # most similar - smaller distance     \n",
     "    \n",
-    "    \n",
-    "    return # Your answer here\n",
+    "    return answer # Your answer here\n",
     "    \n",
     "answer_ten()"
    ]
@@ -1601,14 +1640,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['corpulent', 'intendence', 'validate']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def answer_eleven(entries=['cormulent', 'incendenece', 'validrate']):\n",
+    "    answer=[]\n",
+    "    for word in entries:\n",
+    "        spell = [spell for spell in correct_spellings if spell.startswith(word[0]) and len(spell) > 2] # check similar spells\n",
+    "        jdistance = [(spell, nltk.edit_distance(word, spell, transpositions=True)) for spell in spell] # compute edit distance for each similar spell\n",
+    "        answer.append(sorted(jdistance, key = operator.itemgetter(1))[0][0]) # most similar - smaller distance   \n",
     "    \n",
-    "    \n",
-    "    return # Your answer here \n",
+    "    return answer # Your answer here \n",
     "    \n",
     "answer_eleven()"
    ]
@@ -1625,6 +1679,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
