--- a/Applied Data Science in Python/4 Applied Text Mining in Python/Assignment+4.ipynb
+++ b/Applied Data Science in Python/4 Applied Text Mining in Python/Assignment+4.ipynb
@@ -41,10 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -81,11 +79,15 @@
     "        doc_to_synsets('Fish are nvqjp friends.')\n",
     "        Out: [Synset('fish.n.01'), Synset('be.v.01'), Synset('friend.n.01')]\n",
     "    \"\"\"\n",
-    "    \n",
     "\n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here\n",
+    "    tokens = nltk.word_tokenize(doc)\n",
+    "    pos_tags = nltk.pos_tag(tokens)\n",
+    "    tags = [tag[1] for tag in pos_tags]\n",
+    "    wn_tags = [convert_tag(tag) for tag in tags]\n",
+    "    synsets = [wn.synsets(token, wn_tag) for token, wn_tag in list(zip(tokens, wn_tags))]\n",
+    "    result = [sets[0] for sets in synsets if len(sets) > 0]\n",
+    "    return result # Your Answer Here\n",
     "\n",
     "\n",
     "def similarity_score(s1, s2):\n",
@@ -108,11 +110,18 @@
     "        similarity_score(synsets1, synsets2)\n",
     "        Out: 0.73333333333333339\n",
     "    \"\"\"\n",
-    "    \n",
-    "    \n",
     "    # Your Code Here\n",
+    "    score, count = 0, 0\n",
     "    \n",
-    "    return # Your Answer Here\n",
+    "    for synset in s1:\n",
+    "        # Get the similarity value of the most similar word in the other sentence\n",
+    "        best_score = [s for s in [synset.path_similarity(ss) for ss in s2] if s is not None]    \n",
+    "        # Check that the similarity could have been computed\n",
+    "        if best_score:\n",
+    "            score += np.max(best_score)\n",
+    "            count += 1\n",
+    "        # Average the values    \n",
+    "    return score/count # Your Answer Here\n",
     "\n",
     "\n",
     "def document_path_similarity(doc1, doc2):\n",
@@ -121,7 +130,9 @@
     "    synsets1 = doc_to_synsets(doc1)\n",
     "    synsets2 = doc_to_synsets(doc2)\n",
     "\n",
-    "    return (similarity_score(synsets1, synsets2) + similarity_score(synsets2, synsets1)) / 2"
+    "    return (similarity_score(synsets1, synsets2) + similarity_score(synsets2, synsets1)) / 2\n",
+    "\n",
+    "#doc_to_synsets('This is a function to test document_path_similarity.')"
    ]
   },
   {
@@ -137,17 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.554265873015873"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def test_document_path_similarity():\n",
     "    doc1 = 'This is a function to test document_path_similarity.'\n",
     "    doc2 = 'Use this function to see if your code in doc_to_synsets \\\n",
     "    and similarity_score is correct!'\n",
-    "    return document_path_similarity(doc1, doc2)"
+    "    return document_path_similarity(doc1, doc2)\n",
+    "test_document_path_similarity()"
    ]
   },
   {
@@ -163,15 +184,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ms Stewart, the chief executive, was not expected to attend.'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use this dataframe for questions most_similar_docs and label_accuracy\n",
     "paraphrases = pd.read_csv('paraphrases.csv')\n",
-    "paraphrases.head()"
+    "paraphrases.head()\n",
+    "next(paraphrases.iterrows())[1]['D1']"
    ]
   },
   {
@@ -189,17 +220,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('\"Indeed, Iran should be put on notice that efforts to try to remake Iraq in their image will be aggressively put down,\" he said.',\n",
+       " '\"Iran should be on notice that attempts to remake Iraq in Iran\\'s image will be aggressively put down,\" he said.\\n',\n",
+       " 0.9753086419753086)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def most_similar_docs():\n",
     "    \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    D1 = paraphrases['D1']\n",
+    "    D2 = paraphrases['D2']\n",
+    "    similarity_index = [index for index, paraphrase in paraphrases[paraphrases['Quality']==1].iterrows()]\n",
+    "    similarity_score = [document_path_similarity(paraphrase['D1'], paraphrase['D2']) for index, paraphrase in paraphrases[paraphrases['Quality']==1].iterrows()]\n",
+    "    similarity = pd.Series(similarity_score, index=similarity_index).sort_values(ascending=False)\n",
+    "    return (D1[similarity.reset_index()['index'][0]], D2[similarity.reset_index()['index'][0]], similarity[similarity.reset_index()['index'][0]]) # Your Answer Here\n",
+    "\n",
+    "most_similar_docs()"
    ]
   },
   {
@@ -215,18 +263,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def label_accuracy():\n",
     "    from sklearn.metrics import accuracy_score\n",
     "\n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    paraphrases['similarity score'] = paraphrases.apply(lambda x: document_path_similarity(x['D1'], x['D2']), axis=1)\n",
+    "    paraphrases['prediction'] = np.where(paraphrases['similarity score']>0.75, 1, 0)\n",
+    "    return accuracy_score(paraphrases['Quality'], paraphrases['prediction']) # Your Answer Here\n",
+    "\n",
+    "label_accuracy()"
    ]
   },
   {
@@ -240,10 +300,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -271,17 +329,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use the gensim.models.ldamodel.LdaModel constructor to estimate \n",
     "# LDA model parameters on the corpus, and save to the variable `ldamodel`\n",
     "\n",
     "# Your code here:\n",
-    "#ldamodel = "
+    "ldamodel = gensim.models.ldamodel.LdaModel(corpus=corpus, id2word=id_map, num_topics=10, passes=25, random_state=34)"
    ]
   },
   {
@@ -301,17 +357,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0,\n",
+       "  '0.056*\"edu\" + 0.043*\"com\" + 0.033*\"thanks\" + 0.022*\"mail\" + 0.021*\"know\" + 0.020*\"does\" + 0.014*\"info\" + 0.012*\"monitor\" + 0.010*\"looking\" + 0.010*\"don\"'),\n",
+       " (1,\n",
+       "  '0.024*\"ground\" + 0.018*\"current\" + 0.018*\"just\" + 0.013*\"want\" + 0.013*\"use\" + 0.011*\"using\" + 0.011*\"used\" + 0.010*\"power\" + 0.010*\"speed\" + 0.010*\"output\"'),\n",
+       " (2,\n",
+       "  '0.061*\"drive\" + 0.042*\"disk\" + 0.033*\"scsi\" + 0.030*\"drives\" + 0.028*\"hard\" + 0.028*\"controller\" + 0.027*\"card\" + 0.020*\"rom\" + 0.018*\"floppy\" + 0.017*\"bus\"'),\n",
+       " (3,\n",
+       "  '0.023*\"time\" + 0.015*\"atheism\" + 0.014*\"list\" + 0.013*\"left\" + 0.012*\"alt\" + 0.012*\"faq\" + 0.012*\"probably\" + 0.011*\"send\" + 0.011*\"know\" + 0.010*\"months\"'),\n",
+       " (4,\n",
+       "  '0.025*\"car\" + 0.016*\"just\" + 0.014*\"don\" + 0.014*\"bike\" + 0.012*\"good\" + 0.011*\"new\" + 0.011*\"think\" + 0.010*\"year\" + 0.010*\"cars\" + 0.010*\"time\"'),\n",
+       " (5,\n",
+       "  '0.030*\"game\" + 0.026*\"team\" + 0.023*\"year\" + 0.017*\"games\" + 0.016*\"play\" + 0.012*\"season\" + 0.012*\"players\" + 0.012*\"win\" + 0.011*\"hockey\" + 0.011*\"good\"'),\n",
+       " (6,\n",
+       "  '0.017*\"information\" + 0.014*\"help\" + 0.014*\"medical\" + 0.012*\"new\" + 0.012*\"use\" + 0.012*\"000\" + 0.012*\"research\" + 0.011*\"university\" + 0.010*\"number\" + 0.010*\"program\"'),\n",
+       " (7,\n",
+       "  '0.022*\"don\" + 0.021*\"people\" + 0.018*\"think\" + 0.017*\"just\" + 0.012*\"say\" + 0.011*\"know\" + 0.011*\"does\" + 0.011*\"good\" + 0.010*\"god\" + 0.009*\"way\"'),\n",
+       " (8,\n",
+       "  '0.034*\"use\" + 0.023*\"apple\" + 0.020*\"power\" + 0.016*\"time\" + 0.015*\"data\" + 0.015*\"software\" + 0.012*\"pin\" + 0.012*\"memory\" + 0.012*\"simms\" + 0.011*\"port\"'),\n",
+       " (9,\n",
+       "  '0.068*\"space\" + 0.036*\"nasa\" + 0.021*\"science\" + 0.020*\"edu\" + 0.019*\"data\" + 0.017*\"shuttle\" + 0.015*\"launch\" + 0.015*\"available\" + 0.014*\"center\" + 0.014*\"sci\"')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def lda_topics():\n",
     "    \n",
     "    # Your Code Here\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return ldamodel.print_topics(num_topics=10, num_words=10) # Your Answer Here\n",
+    "\n",
+    "lda_topics()"
    ]
   },
   {
@@ -327,10 +413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "new_doc = [\"\\n\\nIt's my understanding that the freezing will start to occur because \\\n",
@@ -341,17 +425,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0.020003103),\n",
+       " (1, 0.020003311),\n",
+       " (2, 0.020001277),\n",
+       " (3, 0.49637347),\n",
+       " (4, 0.020004023),\n",
+       " (5, 0.020004116),\n",
+       " (6, 0.02000296),\n",
+       " (7, 0.020002633),\n",
+       " (8, 0.020003125),\n",
+       " (9, 0.34360197)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def topic_distribution():\n",
     "    \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "    vect_transform = vect.transform(new_doc)\n",
+    "    corpus_convert = gensim.matutils.Sparse2Corpus(vect_transform, documents_columns=False)\n",
+    "    return list(ldamodel.get_document_topics(corpus_convert))[0] # Your Answer Here\n",
+    "\n",
+    "topic_distribution()"
    ]
   },
   {
@@ -369,10 +474,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def topic_names():\n",
@@ -405,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
