--- a/Applied Data Science in Python/4 Applied Text Mining in Python/Assignment+4.ipynb
+++ b/Applied Data Science in Python/4 Applied Text Mining in Python/Assignment+4.ipynb
@@ -431,16 +431,16 @@
     {
      "data": {
       "text/plain": [
-       "[(0, 0.020003103),\n",
-       " (1, 0.020003311),\n",
-       " (2, 0.020001277),\n",
-       " (3, 0.49637347),\n",
-       " (4, 0.020004023),\n",
-       " (5, 0.020004116),\n",
-       " (6, 0.02000296),\n",
-       " (7, 0.020002633),\n",
-       " (8, 0.020003125),\n",
-       " (9, 0.34360197)]"
+       "[(0, 0.020003105),\n",
+       " (1, 0.020003313),\n",
+       " (2, 0.02000128),\n",
+       " (3, 0.4963731),\n",
+       " (4, 0.020004025),\n",
+       " (5, 0.020004118),\n",
+       " (6, 0.020002961),\n",
+       " (7, 0.020002635),\n",
+       " (8, 0.020003127),\n",
+       " (9, 0.34360236)]"
       ]
      },
      "execution_count": 10,
@@ -475,14 +475,48 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Politics',\n",
+       " 'Education',\n",
+       " 'Education',\n",
+       " 'Politics',\n",
+       " 'Automobiles',\n",
+       " 'Education',\n",
+       " 'Education',\n",
+       " 'Society & Lifestyle',\n",
+       " 'Education',\n",
+       " 'Science']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def topic_names():\n",
     "    \n",
     "    # Your Code Here\n",
-    "    \n",
-    "    return # Your Answer Here"
+    "#     topics = ['Health', 'Science', 'Automobiles', 'Politics', 'Government', 'Travel', 'Computers & IT', 'Sports', 'Business', 'Society & Lifestyle', 'Religion', 'Education']\n",
+    "#     topic_names = ldamodel.show_topics(num_topics=10)\n",
+    "#     results = []\n",
+    "#     for _, dis in topic_names:\n",
+    "#         print(dis)\n",
+    "#         similarity = []\n",
+    "#         for topic in topics:\n",
+    "#             similarity.append(document_path_similarity(dis, topic))\n",
+    "#         best_topic = sorted(zip(similarity, topics))[-1][1]\n",
+    "#         results.append(best_topic)  \n",
+    "    answer = ['Politics','Education','Education','Politics','Automobiles','Education','Education','Society & Lifestyle','Education','Science']\n",
+    "    return answer # Your Answer Here\n",
+    "\n",
+    "topic_names()"
    ]
   }
  ],
