--- a/Applied Data Science in Python/5 Applied Social Network Analysis in Python/Assignment+1.ipynb
+++ b/Applied Data Science in Python/5 Applied Social Network Analysis in Python/Assignment+1.ipynb
@@ -28,10 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -111,7 +109,7 @@
     "        \n",
     "    # Your Code Here\n",
     "    \n",
-    "    return # Your Answer Here"
+    "    return plot_graph() # Your Answer Here"
    ]
   },
   {
@@ -221,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
